{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 30,
  "lineage": "6f2cda32-ab2a-7fda-c132-51e44dbf466d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11676795-tf-api-alb/a9ded7df429cc6fa",
            "arn_suffix": "app/n11676795-tf-api-alb/a9ded7df429cc6fa",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "n11676795-tf-api-alb-278116494.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11676795-tf-api-alb/a9ded7df429cc6fa",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "n11676795-tf-api-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-032bd1ff8cf77dbb9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ca053dcbe5f49cc"
              },
              {
                "subnet_id": "subnet-05a3b8177138c8b14"
              },
              {
                "subnet_id": "subnet-075811427d5564cf9"
              }
            ],
            "subnets": [
              "subnet-04ca053dcbe5f49cc",
              "subnet-05a3b8177138c8b14",
              "subnet-075811427d5564cf9"
            ],
            "tags": {
              "purpose": "assessment",
              "qut-username": "n11676795@qut.edu.au"
            },
            "tags_all": {
              "purpose": "assessment",
              "qut-username": "n11676795@qut.edu.au"
            },
            "vpc_id": "vpc-007bab53289655834",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11676795-tf-api-alb/a9ded7df429cc6fa/254ec510dd140999",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11676795-tf-api-alb/a9ded7df429cc6fa/254ec510dd140999",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11676795-tf-api-alb/a9ded7df429cc6fa",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11676795-tf-api-alb/a9ded7df429cc6fa/2f0d6cd6b8573d5f",
            "certificate_arn": "arn:aws:acm:ap-southeast-2:901444280953:certificate/d9bbedb1-ceb7-4e9a-b75d-13118c55d485",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11676795-tf-api-targets/c08640ebe18fe309",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11676795-tf-api-alb/a9ded7df429cc6fa/2f0d6cd6b8573d5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11676795-tf-api-alb/a9ded7df429cc6fa",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.api",
            "aws_lb_target_group.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_routes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11676795-tf-api-targets/c08640ebe18fe309",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11676795-tf-api-alb/a9ded7df429cc6fa/2f0d6cd6b8573d5f/5c336d95d2a1f841",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/auth/*",
                      "/api/process/*",
                      "/api/videos/*",
                      "/health"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener-rule/app/n11676795-tf-api-alb/a9ded7df429cc6fa/2f0d6cd6b8573d5f/5c336d95d2a1f841",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:listener/app/n11676795-tf-api-alb/a9ded7df429cc6fa/2f0d6cd6b8573d5f",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.api",
            "aws_lb_listener.https",
            "aws_lb_target_group.api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11676795-tf-api-targets/c08640ebe18fe309",
            "arn_suffix": "targetgroup/n11676795-tf-api-targets/c08640ebe18fe309",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11676795-tf-api-targets/c08640ebe18fe309",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:loadbalancer/app/n11676795-tf-api-alb/a9ded7df429cc6fa"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "n11676795-tf-api-targets",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "purpose": "assessment",
              "qut-username": "n11676795@qut.edu.au"
            },
            "tags_all": {
              "purpose": "assessment",
              "qut-username": "n11676795@qut.edu.au"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-007bab53289655834"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11676795-tf-api-targets/c08640ebe18fe309-20251027095551720500000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:901444280953:targetgroup/n11676795-tf-api-targets/c08640ebe18fe309",
            "target_id": "i-06d138b0335882e7d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb_target_group.api"
          ]
        }
      ]
    }
  ]
}